# hypermodern-stack

./: .gitignore  LICENSE  README.md  activate.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: demo_analysis.html  demo_analysis.qmd  sample_analysis.qmd
src/hypermodern_stack/: __init__.py  api.py
tests/: test_api.py
